# transcriptomics_data_service

./: README.md  docker-compose.dev.yaml  pyproject.toml
docs/: authz.md
etc/: bento.authz.module.py  example.authz.module.py
transcriptomics_data_service/: config.py  db.py  main.py  models.py  normalization_utils.py
transcriptomics_data_service/authz/: exceptions.py  middleware_base.py  plugin.py
transcriptomics_data_service/routers/: experiment_results.py  expressions.py  ingest.py  normalization.py  query.py
transcriptomics_data_service/scripts/: normalize.py
transcriptomics_data_service/sql/: schema.sql
