[tool.poetry]
name = "transcriptomics-data-service"
version = "0.1.0"
description = ""
authors = ["Victor Rocheleau <victor.rocheleau@mcgill.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = {extras = ["all"], version = "^0.111.1"}
pydantic = "^2.6.1"
bento-lib = {extras = ["fastapi"], version = "^11.11.2"}
jsonschema = "^4.21.1"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.6"
black = "^24.8.0"
coverage = "^7.4.0"
debugpy = "^1.8.1"
httpx = "^0.27.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^5.0.0"
tox = "^4.12.1"
fasta-checksum-utils = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120
